--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,29 +1,29 @@
-set $rosewater #f5e0dc
-set $flamingo  #f2cdcd
-set $pink      #f5c2e7
-set $mauve     #cba6f7
-set $red       #f38ba8
-set $maroon    #eba0ac
-set $peach     #fab387
-set $yellow    #f9e2af
-set $green     #a6e3a1
-set $teal      #94e2d5
-set $sky       #89dceb
-set $sapphire  #74c7ec
-set $blue      #89b4fa
-set $lavender  #b4befe
-set $text      #cdd6f4
-set $subtext1  #bac2de
-set $subtext0  #a6adc8
-set $overlay2  #9399b2
-set $overlay1  #7f849c
-set $overlay0  #6c7086
-set $surface2  #585b70
-set $surface1  #45475a
-set $surface0  #313244
-set $base      #1e1e2e
-set $mantle    #181825
-set $crust     #11111b
+set $rosewater #f2d5cf
+set $flamingo  #eebebe
+set $pink      #f4b8e4
+set $mauve     #ca9ee6
+set $red       #e78284
+set $maroon    #ea999c
+set $peach     #ef9f76
+set $yellow    #e5c890
+set $green     #a6d189
+set $teal      #81c8be
+set $sky       #99d1db
+set $sapphire  #85c1dc
+set $blue      #8caaee
+set $lavender  #babbf1
+set $text      #c6d0f5
+set $subtext1  #b5bfe2
+set $subtext0  #a5adce
+set $overlay2  #949cbb
+set $overlay1  #838ba7
+set $overlay0  #737994
+set $surface2  #626880
+set $surface1  #51576d
+set $surface0  #414559
+set $base      #303446
+set $mantle    #292c3c
+set $crust     #232634
 
 # target                 title     bg     text    indicator  border
 client.focused           $mauve     $mauve $base   $mauve     $mauve
@@ -148,7 +148,7 @@ bindsym $mod+Shift+x move scratchpad
 
 exec_always --no-startup-id $HOME/.config/polybar/scripts/launch.sh
 exec_always --no-startup-id picom --config $HOME/.config/picom/picom.conf &
-exec_always --no-startup-id feh --bg-fill $HOME/Data/Pictures/Wallpapers/ponyo.jpg
+exec_always --no-startup-id feh --no-fehbg --bg-fill $HOME/Data/Pictures/Wallpapers/ponyo.jpg
 exec_always --no-startup-id "setxkbmap -layout us,ru -option 'grp:win_space_toggle' -option 'caps:swapescape'"
 exec --no-startup-id xrandr --output DisplayPort-2 --mode 1920x1080 --rate 165 --primary --output DisplayPort-1 --mode 1920x1080 --rate 165 --left-of DisplayPort-2
 exec --no-startup-id "echo $(cat ~/.config/secrets/keepassxc) | keepassxc --pw-stdin ~/Data/Documents/welqd.kdbx"
