--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -49,6 +49,7 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'firefox' && argb",
+  "class_g = 'google-chrome' && argb",
   "class_g = 'thunderbird' && argb",
   "class_g = 'easyeffects' && argb",
   "class_i = 'Nemo' && argb",
