--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -18,21 +18,21 @@ label-mode = %mode%
 label-mode-padding = 0
 label-mode-background = ${colors.red}
 label-focused = %icon%
-label-focused-foreground = ${colors.mauve}
-label-focused-background = ${colors.base}
-label-focused-underline = ${colors.mauve}
+label-focused-foreground = ${colors.purple}
+label-focused-background = ${colors.bg1}
+label-focused-underline = ${colors.purple}
 label-focused-padding = 1
 label-unfocused = %icon%
-label-unfocused-foreground = ${colors.text}
-label-unfocused-background = ${colors.base}
+label-unfocused-foreground = ${colors.fg0}
+label-unfocused-background = ${colors.bg1}
 label-unfocused-padding = 1
 label-visible = %icon%
-label-visible-foreground = ${colors.text}
-label-visible-background = ${colors.base}
+label-visible-foreground = ${colors.fg0}
+label-visible-background = ${colors.bg1}
 label-visible-padding = 1
 label-urgent = %icon%
 label-urgent-foreground = ${colors.red}
-label-urgent-background = ${colors.base}
+label-urgent-background = ${colors.bg1}
 label-urgent-padding = 1
 ;label-separator = "/"
 ;label-separator-padding = 1
@@ -41,11 +41,11 @@ label-urgent-padding = 1
 type = internal/xwindow
 label = %title%
 label-empty = ""
-label-empty-foreground = ${colors.text}
-label-empty-background = ${colors.base}
+label-empty-foreground = ${colors.fg0}
+label-empty-background = ${colors.bg1}
 label-maxlen = 30
-label-foreground = ${colors.text}
-label-background = ${colors.base}
+label-foreground = ${colors.fg0}
+label-background = ${colors.bg1}
 
 [module/filesystem]
 type = internal/fs
@@ -59,14 +59,14 @@ label-unmounted-foreground = ${colors.disabled}
 type = internal/pulseaudio
 interval = 2
 format-volume = <ramp-volume><label-volume>
-ramp-volume-foreground = ${colors.pink}
-ramp-volume-background = ${colors.base}
-label-volume-foreground = ${colors.text}
-label-volume-background = ${colors.base}
+ramp-volume-foreground = ${colors.purple}
+ramp-volume-background = ${colors.bg1}
+label-volume-foreground = ${colors.fg0}
+label-volume-background = ${colors.bg1}
 label-volume-padding = 1
 label-muted = " muted"
 label-muted-foreground = ${colors.red}
-label-muted-background = ${colors.base}
+label-muted-background = ${colors.bg1}
 label-muted-padding = 1
 ramp-volume-0 = ""
 ramp-volume-1 = ""
@@ -79,21 +79,21 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = scroll lock
 format-prefix = "󰇧"
-format-prefix-foreground = ${colors.rosewater}
-format-prefix-background = ${colors.base}
+format-prefix-foreground = ${colors.green}
+format-prefix-background = ${colors.bg1}
 format-prefix-padding-right = 1
 label-layout = %icon%
 layout-icon-0 = ru;RU
 layout-icon-1 = us;US  
-label-layout-foreground = ${colors.text}
-label-layout-background = ${colors.base}
+label-layout-foreground = ${colors.fg0}
+label-layout-background = ${colors.bg1}
 label-layout-padding-left = 0 
 label-layout-padding-right = 1 
 label-layout-margin = 0
 label-indicator-on = "%{O-8}%name%"
 label-indicator-off = 
 label-indicator-on-foreground = ${colors.red}
-label-indicator-on-background = ${colors.base}
+label-indicator-on-background = ${colors.bg1}
 label-indicator-on-padding-right = 1
 label-indicator-on-margin = 0
 
@@ -101,25 +101,25 @@ label-indicator-on-margin = 0
 type = internal/memory
 interval = 2
 format-prefix = ""
-format-prefix-foreground = ${colors.green}
-format-prefix-background = ${colors.base}
+format-prefix-foreground = ${colors.orange}
+format-prefix-background = ${colors.bg1}
 label = %used%
-label-foreground = ${colors.text}
-label-background = ${colors.base}
+label-foreground = ${colors.fg0}
+label-background = ${colors.bg1}
 label-padding = 1
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = "󰍛"
-format-prefix-foreground = ${colors.peach}
-format-prefix-background = ${colors.base}
+format-prefix-foreground = ${colors.blue}
+format-prefix-background = ${colors.bg1}
 label = "%percentage%% " 
-label-foreground = ${colors.text}
-label-background = ${colors.base}
+label-foreground = ${colors.fg0}
+label-background = ${colors.bg1}
 label-padding-left = 1
 
-[network-base]
+[network-bg1]
 type = internal/network
 interval = 5
 format-connected = <label-connected>
@@ -127,12 +127,12 @@ format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
 [module/wlan]
-inherit = network-base
+inherit = network-bg1
 interface-type = wireless
 label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 
 [module/eth]
-inherit = network-base
+inherit = network-bg1
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
@@ -143,8 +143,8 @@ date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 format-prefix = "󰥔"
 format-prefix-foreground = ${colors.teal}
-format-prefix-background = ${colors.base}
+format-prefix-background = ${colors.bg1}
 label = %date%
-label-foreground = ${colors.text}
-label-background = ${colors.base}
+label-foreground = ${colors.fg0}
+label-background = ${colors.bg1}
 label-padding = 1
