--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -2,7 +2,7 @@
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "/home/welqd/.config/btop/themes/catppuccin_frappe.theme"
+color_theme = "/usr/share/btop/themes/gruvbox_dark.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = True
@@ -72,7 +72,7 @@ proc_colors = True
 proc_gradient = True
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
-proc_per_core = False
+proc_per_core = True
 
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
@@ -169,7 +169,7 @@ show_swap = True
 swap_disk = True
 
 #* If mem box should be split to also show disks info.
-show_disks = False
+show_disks = True
 
 #* Filter out non physical disks. Set this to False to include network disks, RAM disks and similar.
 only_physical = True
@@ -187,7 +187,7 @@ disk_free_priv = False
 show_io_stat = True
 
 #* Toggles io mode for disks, showing big graphs for disk read/write speeds.
-io_mode = True
+io_mode = False
 
 #* Set to True to show combined read/write io graphs in io mode.
 io_graph_combined = False
