--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,5 +1,6 @@
 ; includes
-include-file = ~/.config/polybar/colors.ini
+; include-file = ~/.config/polybar/colors.ini
+include-file = ~/.config/polybar/gruvbox-material-hard-dark.ini
 include-file = ~/.config/polybar/modules.ini
 
 [bar/mybar]
@@ -13,8 +14,8 @@ border-left-size = 0
 border-right-size = 0
 radius = 0
 ; dpi = 96
-background = ${colors.base}
-foreground = ${colors.text}
+background = ${colors.bg1}
+foreground = ${colors.fg0}
 line-size = 3pt
 padding-left = 0
 padding-right = 0
@@ -25,7 +26,7 @@ cursor-scroll = ns-resize
 enable-ipc = true
 tray-position = right
 ;tray-background = ${colors.mauve}
-;tray-foreground = ${colors.base}
+;tray-foreground = ${colors.bg1}
 ;tray-maxsize = 16
 font-0 = "JetBrains Mono:style=Bold:size=10;2"
 font-1 = "Symbols Nerd Font Mono:size=11;2"
@@ -46,13 +47,13 @@ monitor = ${env:MONITOR:DisplayPort-1}
 monitor-fallback = ${env:MONITOR:DisplayPort-2}
 width = 100
 height = 30
-background = ${colors.base}
+background = ${colors.bg1}
 offset-x = 1800
 offset-y = 38   
 override-redirect = true 
 tray-position = center
 tray-detached = false
-tray-background = ${colors.base}
+tray-background = ${colors.bg1}
 tray-maxsize = 16
 
 modules-left = dummy
