--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -418,6 +418,7 @@ wintypes:
   dnd = { shadow = false; }
   dropdown_menu = { shadow = false; };
   popup_menu    = { shadow = false; };
+  menu          = { shadow = false; };
   utility       = { shadow = false; };
   #popup_menu = { opacity = 1; }
   #dropdown_menu = { opacity = 1; }
