--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -148,3 +148,10 @@ label = %date%
 label-foreground = ${colors.fg0}
 label-background = ${colors.bg1}
 label-padding = 1
+
+[module/tray]
+type = internal/tray
+
+format-margin = 8px
+tray-spacing = 8px
+tray-size = 60%
