--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -24,16 +24,12 @@ module-margin-right = 0
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
-tray-position = right
-;tray-background = ${colors.mauve}
-;tray-foreground = ${colors.bg1}
-;tray-maxsize = 16
 font-0 = "JetBrains Mono:style=Bold:size=10;2"
 font-1 = "Symbols Nerd Font Mono:size=11;2"
 
 modules-left = i3 
 modules-center = xwindow
-modules-right = vpn-status pulseaudio memory cpu xkeyboard date
+modules-right = tray vpn-status pulseaudio memory cpu xkeyboard date
 fixed-center = false
 
 ; wm-restack = generic
@@ -41,25 +37,6 @@ fixed-center = false
 ; wm-restack = i3
 
 ; override-redirect = true
-
-[bar/tray]
-monitor = ${env:MONITOR:DisplayPort-1}
-monitor-fallback = ${env:MONITOR:DisplayPort-2}
-width = 100
-height = 30
-background = ${colors.bg1}
-offset-x = 1800
-offset-y = 38   
-override-redirect = true 
-tray-position = center
-tray-detached = false
-tray-background = ${colors.bg1}
-tray-maxsize = 16
-
-modules-left = dummy
-;;modules-center = 
-;modules-right = dummy
-
 
 [settings]
 screenchange-reload = true
