--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,17 +4,17 @@ import = ["/home/welqd/.config/alacritty/gruvbox-material-medium.toml"]
 size = 14.0
 
 [font.bold]
-family = "JetBrains Mono"
+family = "FiraCode Nerd Font Mono"
 style = "Bold"
 
 [font.italic]
-family = "JetBrains Mono"
+family = "FiraCode Nerd Font Mono"
 style = "Italic"
 
 [font.normal]
-family = "JetBrains Mono"
+family = "FiraCode Nerd Font Mono"
 style = "Regular"
 
 [window]
 decorations = "full"
-# opacity = 0.95
+opacity = 0.95
