--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -24,8 +24,8 @@ module-margin-right = 0
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
-font-0 = "JetBrains Mono:style=Bold:size=10;2"
-font-1 = "Symbols Nerd Font Mono:size=11;2"
+font-0 = "FiraCode Nerd Font Mono:style=Bold:size=10;2"
+font-1 = "Symbols Nerd Font Mono:size=10;2"
 
 modules-left = i3 
 modules-center = xwindow
