--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -72,6 +72,7 @@ ramp-volume-0 = ""
 ramp-volume-1 = ""
 ramp-volume-2 = "󰕾"
 ramp-volume-3 = ""
+ramp-volume-font = 2
 click-right = pavucontrol
 
 [module/xkeyboard]
@@ -79,6 +80,7 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = scroll lock
 format-prefix = "󰇧"
+format-prefix-font = 2
 format-prefix-foreground = ${colors.green}
 format-prefix-background = ${colors.bg1}
 format-prefix-padding-right = 1
@@ -101,6 +103,7 @@ label-indicator-on-margin = 0
 type = internal/memory
 interval = 2
 format-prefix = ""
+format-prefix-font = 2
 format-prefix-foreground = ${colors.orange}
 format-prefix-background = ${colors.bg1}
 label = %used%
@@ -112,6 +115,7 @@ label-padding = 1
 type = internal/cpu
 interval = 2
 format-prefix = "󰍛"
+format-prefix-font = 2
 format-prefix-foreground = ${colors.blue}
 format-prefix-background = ${colors.bg1}
 label = "%percentage%% " 
@@ -142,6 +146,7 @@ interval = 1
 date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 format-prefix = "󰥔"
+format-prefix-font = 2
 format-prefix-foreground = ${colors.teal}
 format-prefix-background = ${colors.bg1}
 label = %date%
