--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -12,6 +12,7 @@ ws-icon-6 = 7;7
 ws-icon-7 = 8;8
 ws-icon-8 = 9;9
 ws-icon-9 = 10;10
+ws-icon-10 = 11;~
 ws-icon-default = 
 format = <label-state> <label-mode>
 label-mode = %mode%
