--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -19,21 +19,21 @@ label-mode = %mode%
 label-mode-padding = 0
 label-mode-background = ${colors.red}
 label-focused = %icon%
-label-focused-foreground = ${colors.purple}
-label-focused-background = ${colors.bg1}
-label-focused-underline = ${colors.purple}
+label-focused-foreground = ${colors.white}
+label-focused-background = ${colors.background}
+label-focused-underline = ${colors.white}
 label-focused-padding = 1
 label-unfocused = %icon%
-label-unfocused-foreground = ${colors.fg0}
-label-unfocused-background = ${colors.bg1}
+label-unfocused-foreground = ${colors.foreground}
+label-unfocused-background = ${colors.background}
 label-unfocused-padding = 1
 label-visible = %icon%
-label-visible-foreground = ${colors.fg0}
-label-visible-background = ${colors.bg1}
+label-visible-foreground = ${colors.foreground}
+label-visible-background = ${colors.background}
 label-visible-padding = 1
 label-urgent = %icon%
-label-urgent-foreground = ${colors.red}
-label-urgent-background = ${colors.bg1}
+label-urgent-foreground = ${colors.red_bright}
+label-urgent-background = ${colors.background}
 label-urgent-padding = 1
 ;label-separator = "/"
 ;label-separator-padding = 1
@@ -42,11 +42,11 @@ label-urgent-padding = 1
 type = internal/xwindow
 label = %title%
 label-empty = ""
-label-empty-foreground = ${colors.fg0}
-label-empty-background = ${colors.bg1}
-label-maxlen = 30
-label-foreground = ${colors.fg0}
-label-background = ${colors.bg1}
+label-empty-foreground = ${colors.foreground}
+label-empty-background = ${colors.background}
+label-maxlen = 40
+label-foreground = ${colors.foreground}
+label-background = ${colors.background}
 
 [module/filesystem]
 type = internal/fs
@@ -61,13 +61,13 @@ type = internal/pulseaudio
 interval = 2
 format-volume = <ramp-volume><label-volume>
 ramp-volume-foreground = ${colors.purple}
-ramp-volume-background = ${colors.bg1}
-label-volume-foreground = ${colors.fg0}
-label-volume-background = ${colors.bg1}
+ramp-volume-background = ${colors.background}
+label-volume-foreground = ${colors.foreground}
+label-volume-background = ${colors.background}
 label-volume-padding = 1
 label-muted = " muted"
 label-muted-foreground = ${colors.red}
-label-muted-background = ${colors.bg1}
+label-muted-background = ${colors.background}
 label-muted-padding = 1
 ramp-volume-0 = ""
 ramp-volume-1 = ""
@@ -83,20 +83,20 @@ blacklist-1 = scroll lock
 format-prefix = "󰇧"
 format-prefix-font = 2
 format-prefix-foreground = ${colors.green}
-format-prefix-background = ${colors.bg1}
+format-prefix-background = ${colors.background}
 format-prefix-padding-right = 1
 label-layout = %icon%
 layout-icon-0 = ru;RU
 layout-icon-1 = us;US  
-label-layout-foreground = ${colors.fg0}
-label-layout-background = ${colors.bg1}
+label-layout-foreground = ${colors.foreground}
+label-layout-background = ${colors.background}
 label-layout-padding-left = 0 
 label-layout-padding-right = 1 
 label-layout-margin = 0
 label-indicator-on = "%{O-8}%name%"
 label-indicator-off = 
 label-indicator-on-foreground = ${colors.red}
-label-indicator-on-background = ${colors.bg1}
+label-indicator-on-background = ${colors.background}
 label-indicator-on-padding-right = 1
 label-indicator-on-margin = 0
 
@@ -105,11 +105,11 @@ type = internal/memory
 interval = 2
 format-prefix = ""
 format-prefix-font = 2
-format-prefix-foreground = ${colors.orange}
-format-prefix-background = ${colors.bg1}
+format-prefix-foreground = ${colors.yellow}
+format-prefix-background = ${colors.background}
 label = %used%
-label-foreground = ${colors.fg0}
-label-background = ${colors.bg1}
+label-foreground = ${colors.foreground}
+label-background = ${colors.background}
 label-padding = 1
 
 [module/cpu]
@@ -118,28 +118,18 @@ interval = 2
 format-prefix = "󰍛"
 format-prefix-font = 2
 format-prefix-foreground = ${colors.blue}
-format-prefix-background = ${colors.bg1}
+format-prefix-background = ${colors.background}
 label = "%percentage%% " 
-label-foreground = ${colors.fg0}
-label-background = ${colors.bg1}
+label-foreground = ${colors.foreground}
+label-background = ${colors.background}
 label-padding-left = 1
 
-[network-bg1]
+
+[module/network]
 type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-bg1
-interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
-[module/eth]
-inherit = network-bg1
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+interface = br0
+label-connected = ip: %local_ip%
 
 [module/date]
 type = internal/date
@@ -148,11 +138,11 @@ date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 format-prefix = "󰥔"
 format-prefix-font = 2
-format-prefix-foreground = ${colors.teal}
-format-prefix-background = ${colors.bg1}
+format-prefix-foreground = ${colors.cyan}
+format-prefix-background = ${colors.background}
 label = %date%
-label-foreground = ${colors.fg0}
-label-background = ${colors.bg1}
+label-foreground = ${colors.foreground}
+label-background = ${colors.background}
 label-padding = 1
 
 [module/tray]
