--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,6 +1,4 @@
-; includes
-; include-file = ~/.config/polybar/colors.ini
-include-file = ~/.config/polybar/gruvbox-material-hard-dark.ini
+include-file = ~/.config/polybar/kanagawa_dragon.ini
 include-file = ~/.config/polybar/modules.ini
 
 [bar/mybar]
@@ -14,22 +12,22 @@ border-left-size = 0
 border-right-size = 0
 radius = 0
 ; dpi = 96
-background = ${colors.bg1}
-foreground = ${colors.fg0}
+background = ${colors.background}
+foreground = ${colors.foreground}
 line-size = 3pt
 padding-left = 0
 padding-right = 0
 module-margin-left = 0
 module-margin-right = 0
 cursor-click = pointer
-cursor-scroll = ns-resize
+cursor-scroll = ns-resizforeground
 enable-ipc = true
 font-0 = "FiraCode Nerd Font Mono:style=Bold:size=10;2"
 font-1 = "Symbols Nerd Font Mono:size=10;2"
 
 modules-left = i3 
 modules-center = xwindow
-modules-right = tray vpn-status pulseaudio memory cpu xkeyboard date
+modules-right = tray pulseaudio memory cpu xkeyboard date
 fixed-center = false
 
 ; wm-restack = generic
