--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["/home/welqd/.config/alacritty/gruvbox-material-medium.toml"]
 
 [font]
 size = 14.0
@@ -17,4 +16,7 @@ style = "Regular"
 
 [window]
 decorations = "full"
+
+[general]
+import = ["/home/welqd/.config/alacritty/gruvbox-material-medium.toml"]
 # opacity = 0.90
